 * new model diagnostic function: plot_pred_by_term -- plots the effect of each smooth in the model spatially.
 * remove "abundance" option for the response, use "count"
 * dsm.var.prop and dsm_varprop have better diagnostics for checking the variance model hasn't done something weird
 * dsm.var.movblk discards replicates where the model didn't converge

# 2.2.14
 * nasty bug in predict.dsm fixed: was logging the offset twice when newdata was not provided, leading to very odd checking plots. This also effected the results of predict() when newdata= was not specified. Thanks to Megan Ferguson for alerting us to this.
 * add support for point transects(!)
 * rqgam.check() now produced ONLY the linear predictor vs. randomised quantile residuals plot to avoid confusion in interpreting the other plots
 * REML is now default method for smoothing parameter selection

# 2.2.13
 * dsm.var.gam now has an example
 * dsm.var.prop now checks that the detection function model does not have covariates

# 2.2.12
 * The alpha argument now works for analytical variance reported using dsm.var.prop and dsm.var.gam print.summary and summary methods. Thanks to Jason Roberts and Eric Rexstad for spotting this issue.
 * dsm now uses numDeriv::grad to calculate derivatives for variance estimation -- this should be much faster. Thanks to Jason Roberts for this fix.
 * dsm now requires mrds version 2.1.15 or higher, due to internal changes
 * fixed issue where Effort column was required even when segment.area was specified. Thanks to Greg Lollback for spotting this issue.
 * ensured that ordering of segments matched the ordering of the observations so that aggregation of observations are correct. Thanks to Dave Fifield for reporting this bug and suggesting a fix.
 * check.cols no longer checks to see if there is a column called "distance" when strip transects are being used

# 2.2.11
 * dsm.var.prop uses update() rather than messing around with eval()