@@ -36,7 +36,8 @@ For more information on how to construct the prediction grid \code{data.frame}, 
 
 This routine is only useful if a detection function has been used in the DSM.
 
-Note that we use \code{Vc} here (see \code{\link{gamObject}}), which is the variance-covariance matrix for the spatial model, corrected for smoothing parameter uncertainty.
+Note that we can use \code{var_type="Vc"} here (see \code{\link{gamObject}}), which is the variance-covariance matrix for the spatial model, corrected for smoothing parameter uncertainty. See Wood, Pya & Säfken (2016) for more information.
+Negative binomial models fitted using the \code{\link{nb}} family will give strange results (overly big variance estimates due to scale parameter issues) so \code{nb} models are automatically efitted with \code{\link{negbin}} (with a warning). It is probably worth refitting these models with \code{negbin} manually (perhaps giving a smallish range of possible values for the negative binomial parameter) to check that convergence was reached.
 }
 \examples{
 \dontrun{
@@ -62,6 +63,7 @@ mod1.varp <- dsm_varprop(mod1, preddata)
 }
 \references{
 Williams, R., Hedley, S.L., Branch, T.A., Bravington, M.V., Zerbini, A.N. and Findlay, K.P. (2011). Chilean Blue Whales as a Case Study to Illustrate Methods to Estimate Abundance and Evaluate Conservation Status of Rare Species. Conservation Biology 25(3), 526-535.
+Wood, S.N., Pya, N. and Säfken, B. (2016) Smoothing parameter and model selection for general smooth models. Journal of the American Statistical Association, 1–45.
 }
 \author{
 David L. Miller, based on code from Mark V. Bravington and Sharon L. Hedley.
